--- a/styles/style-article.css
+++ b/styles/style-article.css
@@ -6,23 +6,34 @@ html{
     margin:2em;
     font-family: "aboreto", helvetica, sans-serif;
 }
+
 body{
     background-color: beige;
 }
+
+/* Navigation bar styling*/
+
 nav{
     margin-left:7em;
     margin-top:4em;
     padding-bottom: 3rem;
 }
+
+nav a:link{
+    color:black;
+    font-size:1rem;
+}
+
+/* Header styling*/
+
 header{
     margin-top:3em;
     margin-bottom:5em;
     text-align:center;
 }
-nav a:link{
-    color:black;
-    font-size:1rem;
-}
+
+/* Article styling*/
+
 article{
     margin: 1em 7em 1em 7em;
     padding:3em;
@@ -32,6 +43,9 @@ article{
 article p:last-of-type{
     font-style: italic;
 }
+
+/* Footer styling*/
+
 footer{
     padding-top:1rem;
     padding-left:7rem;
