--- a/styles/style-article.css
+++ b/styles/style-article.css
@@ -1,3 +1,17 @@
+/*Mobile Phone*/
+@media only screen and (min-device-width:320px) and (max-device-width:480px){
+    html{
+        font-size:0.5rem;
+        margin:0;
+        padding:0;
+    }
+
+    article{
+        padding:0;
+        font-size:0.8rem;
+    }
+
+    }
 @font-face {
     font-family: "aboreto";
     src: url(../fonts/Aboreto/Aboreto-Regular.ttf);
