--- a/styles/style-index-page.css
+++ b/styles/style-index-page.css
@@ -1,3 +1,27 @@
+/*Mobile Phone*/
+@media only screen and (min-device-width:320px) and (max-device-width:480px){
+html{
+    font-size:0.5rem;
+    margin:0;
+    padding:0;
+}
+
+main{
+    display:block;
+    margin:0;
+    padding:0;
+}
+main img{
+    margin-top:5rem;
+    width:10%;
+    height:50%;
+}
+.welcome-msg{
+    padding:1em;
+    font-size:0.8rem;
+}
+}
+
 @font-face {
     font-family: "aboreto";
     src: url(../fonts/Aboreto/Aboreto-Regular.ttf);
