--- a/styles/style-izyum.css
+++ b/styles/style-izyum.css
@@ -1,3 +1,29 @@
+/*Mobile Phone*/
+@media only screen and (min-device-width:390px) and (max-device-width:844px){
+    html{
+        font-size:0.5rem;
+        margin:0;
+        padding:0;
+    }
+
+    section.gallery{
+        padding:0;
+        margin:1rem;
+        height:400px;
+    }
+    figure{
+        padding:1rem;
+        margin:1rem;
+        height:100px;
+    }
+    img{
+        margin:0;
+        padding:0;
+        box-sizing: border-box;
+        max-height:80%;
+
+    }
+    }
 @font-face {
     font-family: "aboreto";
     src: url(../fonts/Aboreto/Aboreto-Regular.ttf);
