--- a/styles/style-biography.css
+++ b/styles/style-biography.css
@@ -91,8 +91,8 @@ section{
 
 .current-state img{
     padding-top: 1rem;
-    flex:1;
-    max-width: 100%;
+    flex:1 1 auto;
+    max-width: 50%;
 }
 .current-state p {
     flex:2;
